--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "upgrade-dependencies": "npx npm-check-updates -u && npm i"
   },
   "dependencies": {
     "axios": "0.19.2",
-    "bootstrap": "4.5.0",
-    "bootstrap-vue": "2.15.0",
+    "bootstrap": "4.5.2",
+    "bootstrap-vue": "2.16.0",
     "core-js": "3.6.5",
     "vue": "2.6.11",
-    "vue-router": "3.3.3",
-    "vuex": "3.4.0"
+    "vue-router": "3.4.3",
+    "vuex": "3.5.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "4.4.4",
-    "@vue/cli-plugin-eslint": "4.4.4",
-    "@vue/cli-service": "4.4.4",
-    "@vue/eslint-config-airbnb": "5.0.2",
+    "@vue/cli-plugin-babel": "4.5.4",
+    "@vue/cli-plugin-eslint": "4.5.4",
+    "@vue/cli-service": "4.5.4",
+    "@vue/eslint-config-airbnb": "5.1.0",
     "babel-eslint": "10.1.0",
-    "eslint": "7.2.0",
-    "eslint-plugin-import": "2.21.2",
+    "eslint": "7.7.0",
+    "eslint-plugin-import": "2.22.0",
     "eslint-plugin-vue": "6.2.2",
     "vue-template-compiler": "2.6.11"
   }
