--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "upgrade-dependencies": "npx npm-check-updates -u && npm i"
   },
   "dependencies": {
+    "@websanova/vue-auth": "3.3.8",
     "axios": "0.21.0",
     "bootstrap": "4.5.3",
     "bootstrap-vue": "2.18.1",
     "core-js": "3.7.0",
+    "jwt-decode": "3.1.1",
     "vue": "2.6.12",
+    "vue-axios": "3.1.3",
     "vue-router": "3.4.9",
     "vuex": "3.5.1"
   },
