--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "3.1.1",
     "vue": "2.6.12",
     "vue-axios": "3.1.3",
+    "vue-gtag": "1.10.0",
     "vue-router": "3.4.9",
     "vuex": "3.5.1"
   },
