--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "2.6.12",
     "vue-axios": "3.1.3",
     "vue-gtag": "1.10.0",
+    "vue-i18n": "8.22.1",
     "vue-router": "3.4.9",
     "vuex": "3.5.1"
   },
