--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vue/cli-service": "4.5.8",
     "@vue/eslint-config-airbnb": "5.1.0",
     "babel-eslint": "10.1.0",
+    "compression-webpack-plugin": "6.1.1",
     "eslint": "7.13.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-vue": "7.1.0",
