--- a/package.json
+++ b/package.json
@@ -22,15 +22,21 @@
     "vuex": "3.6.2"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.15.2",
+    "@typescript-eslint/parser": "4.15.2",
     "@vue/cli-plugin-babel": "4.5.11",
     "@vue/cli-plugin-eslint": "4.5.11",
+    "@vue/cli-plugin-typescript": "4.5.11",
     "@vue/cli-service": "4.5.11",
     "@vue/eslint-config-airbnb": "5.3.0",
+    "@vue/eslint-config-typescript": "7.0.0",
     "babel-eslint": "10.1.0",
     "compression-webpack-plugin": "6.1.1",
     "eslint": "7.21.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-vue": "7.6.0",
+    "typescript": "4.2.2",
+    "vue-cli-plugin-typescript": "0.0.1",
     "vue-template-compiler": "2.6.12"
   }
 }
